<resources>
    <string name="app_name">BarberApp</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="find_my_barber">Find My Barber</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="let_s_make_your_hair_attractive">Let\'s make your hair attractive</string>
    <string name="appointment">Appointment</string>
    <string name="services">Services</string>
    <string name="hours">Hours</string>
    <string name="more">More</string>
    <string name="combo_deal">Combo Deal</string>
    <string name="barbers">Barbers</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="our_services">Our Services</string>
    <string name="how_to_reach">How To reach?</string>
    <string name="working_hours">Working Hours</string>
    <string name="user_ratings">User Ratings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="select_barber">Select Barber</string>
    <string name="change_barber">Change barber</string>
    <string name="next">Next</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="close">Close</string>
    <string name="description">Description</string>
    <string name="rate">Rate</string>
    <string name="duration">Duration</string>
    <string name="barber">Barber</string>
    <string name="cancel">Cancel</string>
    <string name="my_appointments">My Appointments</string>
    <string name="reschedule">Reschedule</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="no_appointments_yet">No Appointments Yet</string>
    <string name="register_now">Register Now!</string>
    <string name="confirm">Confirm</string>
</resources>