<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.barberapp.viewmodel.AuthViewModel" />
        <import type="android.view.View" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_30dp"
    tools:context=".view.auth.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:text="@string/find_my_barber"
        android:textSize="@dimen/_25sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/main_sky_blue"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/_50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobile_number"
        android:text="@string/mobile_number"
        android:textSize="@dimen/_17sp"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutMobile"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/mobile_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_mobile"
            android:text="@={viewModel.mobileNo}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/password"
        android:text="@string/password"
        android:textSize="@dimen/_17sp"
        app:layout_constraintTop_toBottomOf="@id/etLayoutMobile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutPassword"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/_15dp"
        android:textSize="@dimen/_17sp"
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:textColor="@color/main_green"
        app:layout_constraintTop_toBottomOf="@id/etLayoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:onClick="@{(view) -> viewModel.onLoginClick()}"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintBottom_toTopOf="@id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_account"
        android:textSize="@dimen/_17sp"
        android:text="@string/don_t_have_account_sign_up"
        android:textColor="@color/main_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:indeterminate="true"
        android:visibility='@{viewModel.isProcessing? View.VISIBLE: View.GONE}'
        app:indicatorColor="@color/white"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="@dimen/_120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/black"
        app:trackThickness="@dimen/_20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>