<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_30dp"
    tools:context=".view.RegistrationActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobile_number"
        android:text="@string/mobile_number"
        android:textSize="@dimen/_17sp"
        android:layout_marginTop="@dimen/_50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_mobile"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@id/mobile_number"
        android:background="@drawable/background_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/password"
        android:text="@string/password"
        android:textSize="@dimen/_17sp"
        app:layout_constraintTop_toBottomOf="@id/edit_mobile"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:background="@drawable/background_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/confirm_password"
        android:text="@string/confirm_password"
        android:layout_marginTop="@dimen/_20dp"
        android:textSize="@dimen/_17sp"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_confirm_password"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        android:background="@drawable/background_edit_text"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:text="@string/sign_up"
        android:backgroundTint="@color/main_red"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/have_account"
        android:text="Already have an account? Login"
        android:textSize="@dimen/_17sp"
        android:textColor="@color/main_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/white"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="@dimen/_120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/black"
        app:trackThickness="@dimen/_20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>