<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="isOpen"
            type="String" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_green"
    tools:context=".view.dashboard.fragments.HomeFragment">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/scissor"
                android:layout_marginStart="@dimen/_20dp"
                android:padding="@dimen/_10dp"
                android:src="@drawable/ic_baseline_content_cut_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/welcome"
                app:layout_constraintBottom_toBottomOf="@id/welcome_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/scissor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome_sub"
                android:text="@string/let_s_make_your_hair_attractive"
                android:textSize="@dimen/_17sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/welcome"
                app:layout_constraintStart_toEndOf="@id/scissor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_open"
                android:text="@{isOpen}"
                tools:text="We are now OPEN"
                android:textSize="@dimen/_20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="italic"
                android:gravity="center"
                android:textColor="@color/main_beige"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginStart="@dimen/_20dp"
                app:layout_constraintTop_toBottomOf="@id/welcome_sub"
                android:paddingBottom="@dimen/_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_reserve"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginStart="@dimen/_20dp"
                app:layout_constraintTop_toBottomOf="@id/text_open"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_baseline_insert_invitation_24"
                android:background="@drawable/background_round"
                android:padding="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/appointment"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/btn_reserve"
                app:layout_constraintStart_toStartOf="@id/btn_reserve"
                app:layout_constraintEnd_toEndOf="@id/btn_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_service"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintTop_toBottomOf="@id/text_open"
                app:layout_constraintStart_toEndOf="@id/btn_reserve"
                app:layout_constraintEnd_toStartOf="@id/btn_hours"
                android:src="@drawable/ic_baseline_cleaning_services_24"
                android:background="@drawable/background_round"
                android:padding="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/services"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/btn_service"
                app:layout_constraintStart_toStartOf="@id/btn_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_hours"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintTop_toBottomOf="@id/text_open"
                app:layout_constraintStart_toEndOf="@id/btn_service"
                app:layout_constraintEnd_toStartOf="@id/btn_more"
                android:src="@drawable/ic_baseline_access_time_24"
                android:background="@drawable/background_round"
                android:padding="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/hours"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/btn_hours"
                app:layout_constraintStart_toStartOf="@id/btn_hours"
                app:layout_constraintEnd_toEndOf="@id/btn_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_more"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintTop_toBottomOf="@id/text_open"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_20dp"
                android:src="@drawable/ic_baseline_search_24"
                android:background="@drawable/background_round"
                android:padding="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/more"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/btn_more"
                app:layout_constraintStart_toStartOf="@id/btn_more"
                app:layout_constraintEnd_toEndOf="@id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent=".35"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:background="@drawable/background_framelayout_dash"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/our_services"
                android:text="@string/our_services"
                android:textColor="@color/main_gray"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager_service"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintTop_toBottomOf="@id/our_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/barbers"
                android:text="@string/barbers"
                android:textSize="@dimen/_20sp"
                android:textColor="@color/main_gray"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_50dp"
                app:layout_constraintTop_toBottomOf="@id/viewpager_service"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_barbers"
                tools:listitem="@layout/item_barber_profile"
                tools:itemCount="1"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintTop_toBottomOf="@id/barbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>