<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.barberapp.viewmodel.AppointmentViewModel" />
        <import type="android.view.View" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.appointment.SummaryFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_date"
        android:text="@{viewModel.appointmentDate}"
        tools:text="Fri 07 Jan, 2022"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_time"
        tools:text="03:15 PM to 03:30 PM (15 Minutes)"
        android:text="@{viewModel.startTime + ` to ` + viewModel.endTime + ` (` + viewModel.totalDuration + ` Minutes)`}"
        android:textSize="@dimen/_20sp"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:background="@drawable/background_boundary"
        app:layout_constraintTop_toBottomOf="@id/text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/barber"
        android:text="@string/barber"
        android:textSize="@dimen/_17sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/img_barber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_barber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_barber"
        tools:text="Roshan Rote"
        android:text="@{viewModel.selectedBarber.barberName}"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_barber"
        app:layout_constraintTop_toBottomOf="@id/barber"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_barber"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/text_time"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/_70dp"
        android:layout_height="@dimen/_70dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toBottomOf="@id/img_barber"
        android:background="@drawable/background_boundary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/services"
        android:text="@string/services"
        android:textSize="@dimen/_17sp"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintTop_toBottomOf="@id/img_barber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_services"
        tools:listitem="@layout/item_service_list"
        tools:itemCount="3"
        app:layout_constraintTop_toBottomOf="@id/services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_total_cost"
        tools:text="Total cost : 30"
        android:text="@{`Total cost : ` + viewModel.totalCost.toString()}"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/main_green"
        android:textStyle="bold"
        android:padding="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/main_red"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:text="@string/next"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_sky_blue"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:indeterminate="true"
        android:visibility='@{viewModel.isProcessing? View.VISIBLE: View.GONE}'
        app:indicatorColor="@color/white"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="@dimen/_120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/black"
        app:trackThickness="@dimen/_20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>